--- a/Microbit/GPT+Microbit/03.자료형.md
+++ b/Microbit/GPT+Microbit/03.자료형.md
@@ -93,7 +93,7 @@ while True:
         var=input('문자를 입력해주세요:')
         display.scroll(str(type(var)))
         display.clear()
-    if button_a.is_pressed() or button_b.is_pressed():
+    if button_a.is_pressed() and button_b.is_pressed():
         music.play(music.JUMP_UP)
         break
 ```
