Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -5,7 +5,7 @@
 ```
 from microbit import *
 
-name = "Microbit"
+name = 'Microbit'
 age = 5
 
 message = "Hello, I'm %s and I'm %d years old!" % (name, age)
