Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -8,7 +8,7 @@ from microbit import *
 name = 'Microbit'
 age = 5
 
-message = "Hello, I'm %s and I'm %d years old!" % (name, age)
+message = 'Hello, I'm %s and I'm %d years old!' % (name, age)
 print(message)
 
 while True:
@@ -21,13 +21,13 @@ while True:
 ```
 from microbit import *
 
-name = "Microbit"
+name = 'Microbit'
 age = 5
 
-message_00 = "Hello, I'm {} and I'm {} years old!".format(name, age)
-message_01 = "Hello, I'm {0} and I'm {1} years old!".format(name, age)
+message_00 = 'Hello, I'm {} and I'm {} years old!'.format(name, age)
+message_01 = 'Hello, I'm {0} and I'm {1} years old!'.format(name, age)
 
-#message_02 = f"Hello, I'm {name} and I'm {age} years old!"
+#message_02 = f'Hello, I'm {name} and I'm {age} years old!'
 #f-string의 포멧팅 방식은 microbit python editor에서 적용이 안됨.
 #f-string 포멧팅 방식아란?
 
