--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -30,6 +30,11 @@ Add, Sub, Mul, Div = num_01+num_02, num_01-num_02, num_01*num_02, num_01/num_02
 Quo, Rem, Pow=num_01//num_02, num_01%num_02, num_01**num_02
 print(Add, Sub, Mul, Div, Quo, Rem, Pow)
 ```
+### 위 수정한 코드를 format()함수로 더 간결하게 수정
+```
+num_01, num_02 = int(input('첫 번째 숫자입력:')), int(input('두 번째 숫자입력:'))
+print('{},{},{},{},{},{},{}'.format(num_01+num_02, num_01-num_02, num_01*num_02, num_01/num_02, num_01//num_02, num_01%num_02, num_01**num_02))
+```
 
 ### 비교 연산자 결과 출력하기
 * 샘플코드_02 
