--- a/Microbit/Training/[예제] 암호화, 복호화 코드.md
+++ b/Microbit/Training/[예제] 암호화, 복호화 코드.md
@@ -17,7 +17,9 @@ encrypted_message = caesar_cipher(message.upper(), key)
 print("Encrypted Message:", encrypted_message)
 ```
 
+이 코드는 사용자로부터 암호화된 메시지(encrypted_message)와 키 값(key)을 입력받아, caesar_decipher 함수를 통해 복호화된 메시지를 계산하고 출력합니다. 복호화 함수에서는 암호화 과정과 반대로 키 값을 빼주는 연산을 수행하여 각 문자를 원래의 위치로 되돌립니다.
 
+복호화 과정에서도 문자가 알파벳인 경우에만 복호화 연산을 수행하고, 그 외의 문자(공백, 특수문자 등)는 변경하지 않고 그대로 유지합니다. 복호화된 메시지는 대문자로 출력되는데, 필요에 따라 .upper() 메소드를 제거하거나 .lower() 메소드로 대체하여 소문자로 출력할 수도 있습니다.
 
 # 복호화
 ```
