Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -56,8 +56,10 @@ print('소문자로 변환:', lowercase_string) #2번째 줄 출력
 
 # 문자열 앞뒤의 공백 제거
 trimmed_string_00 = '   Example String   '.strip()
-trimmed_string_01= 'wExample Stringw'.strip('w')
 print('앞뒤 공백 제거:', trimmed_string_00) #3번째 줄 출력
+
+# 문자열 앞뒤 w 제거
+trimmed_string_01= 'wExample Stringw'.strip('w')
 print('앞뒤 w 제거:', trimmed_string_01) #4번째 줄 출력
 
 # 문자열을 다른 문자로 대체
@@ -71,7 +73,6 @@ print('나눈 결과:', split_string) #6번째 줄 출력
 # 문자열의 길이 확인
 length = len(original_string)
 print('문자열 길이:', length) #7번째 줄 출력
-
 ```
 
 ## 이해하기 샘플코드
