--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -56,19 +56,19 @@ if number != 5: #6번 if문
 from microbit import *
 while True:
     if button_a.is_pressed() and button_b.is_pressed():
-        display.scroll('A+B')
+        display.scroll('A+B', delay=40)
     sleep(200)
     
-    elif button_a.is_pressed() or button_b.is_pressed():
-        display.scroll('A or B')
+    if button_a.is_pressed() or button_b.is_pressed():
+        display.scroll('A or B', delay=40)
     sleep(200)
     
-    elif button_a.is_pressed() and not button_b.is_pressed():
-        display.scroll('A & not B')
+    if button_a.is_pressed() and not button_b.is_pressed():
+        display.scroll('A & not B', delay=40)
     sleep(200)
 
-    elif not button_a.is_pressed() and not button_b.is_pressed():
-        display.scroll('not A & not B') #이 조건은 두 개의 버튼이 모두 눌리지 않은 상태이기 때문에, 마이크로 비트가 그대로 있는 상태라 할 수 있다.
+    if not button_a.is_pressed() and not button_b.is_pressed():
+        display.scroll('not A & not B', delay=40) #이 조건은 두 개의 버튼이 모두 눌리지 않은 상태이기 때문에, 마이크로 비트가 그대로 있는 상태라 할 수 있다.
     sleep(200)
 ```
 
