--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -146,6 +146,30 @@ while True:
         display.scroll('Daytime')
         sleep(1000)
 ```
+  - 낮밤 알리미 코드 들여쓰기 수정: 핀 터치 되면 낮밤을 판단
+```
+from microbit import *
+
+while True:
+    light_lv = display.read_light_level() #조도값 범위: 0-255
+    if button_a.was_pressed() and button_b.was_pressed():
+        print('현재 조도 값은 {}입니다.'.format(light_lv))
+        display.scroll('lgth_lv: {}.'.format(light_lv))
+        sleep(1000)
+    
+    elif pin_logo.is_touched():
+        print('낮인지 밤인지 판단 중입니다.')
+        display.scroll('<  <  <  <  <  <  <', delay=30)
+        sleep(1000)
+        if light_lv >= 0 and light_lv < 100:
+            print('현재는 밤 입니다.')
+            display.scroll('nighttime')
+            sleep(1000)
+        elif light_lv >= 100 and light_lv <= 255:
+            print('현재는 낮 입니다.')
+            display.scroll('Daytime')
+            sleep(1000)
+```
 
 ## 적용하기 샘플코드
 * 커스텀 인스트럭션 작성하기
