--- a/Microbit/GPT+Microbit/09.if문 심화.md
+++ b/Microbit/GPT+Microbit/09.if문 심화.md
@@ -180,7 +180,7 @@ while True:
     ```  
   - GPT 프롬프트 템플릿 입력 내용
     ```
-    1.목적(Purpose): 마이크로 비트를 활용한 나침반(Compass) 만들기
+    1.목적(Purpose): 
     2.필요한 라이브러리 및 모듈 (Libraries & Modules): microbit,  
     3.주요 변수 및 데이터 구조 (Main Variables & Data Structures): 
       -방향 값을 저장하는 변수명은 direction을 사용. 
