--- a/Microbit/GPT+Microbit/09.if문 심화.md
+++ b/Microbit/GPT+Microbit/09.if문 심화.md
@@ -173,14 +173,14 @@ while True:
 
   - GPT 프롬프트 템플릿
     ```
-    1.목적(Purpose): 마이크로 비트를 활용한 나침반(Compass) 만들기
-    2.필요한 라이브러리 및 모듈 (Libraries & Modules): microbit, 
-    3.주요 변수 및 데이터 구조 (Main Variables & Data Structures): direction, 
-    4.주요 기능 또는 알고리즘 (Main Functions or Algorithms):
+    1.목적(Purpose): 
+    2.필요한 라이브러리 및 모듈:
+    3.주요 변수 및 데이터 구조:
+    4.주요 기능 또는 알고리즘:
     ```  
   - GPT 프롬프트 템플릿 입력 내용
     ```
-    1.목적(Purpose): 
+    1.목적(Purpose): 마이크로 비트를 활용한 나침반(Compass) 만들기
     2.필요한 라이브러리 및 모듈 (Libraries & Modules): microbit,  
     3.주요 변수 및 데이터 구조 (Main Variables & Data Structures): 
       -방향 값을 저장하는 변수명은 direction을 사용. 
