--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -155,8 +155,8 @@ for i in range(0,num+1,2):
 ```
 from microbit import *
 
-for i in range(100,0,-2):
-    print(i) #100부터 짝수만 출력
+for i in range(101,0,-2):
+    print(i) #100부터 홀수만 출력
     display.scroll(i, delay= 50)
 ```
 
