--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -97,8 +97,8 @@ while True:
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
-     #GPT 3.5모델로는 아래 '기능'내용을 입력하게 되면, 원하는 코드가 제공 되지 않을 수 있다. 그럴 때는 마이크로 비트 LED 0,0부터 4,4까지 LED좌표를 구체적으로 넣어 기능을 설명하는 것을 추천한다. 나아가 원하는 코드 출력이 되지 않았을 때는 지속적으로 대화로 요청하며 오류가 발생하는 부분 수정 및 원하는 기능 표현을 제시하여 코드를 정교화할 수 있다. 필자 또한 원하는 출력을 얻기위해 어려움을 겪었다. 챕터 10, 11에서 했던 대화 내용링크를 공유한다.
-     [GPT 대화 링크] [https://chat.openai.com/share/3d4ead52-db6f-468c-8d31-80fdffb5299c](https://chat.openai.com/share/1acba22f-a9ff-45ad-9c7e-65c0fba5ebd1)
+     #GPT 3.5모델로는 아래 '기능'내용을 입력하게 되면, 원하는 코드가 제공 되지 않을 수 있습니다. 그럴 때는 마이크로 비트 LED 0,0부터 4,4까지 LED좌표를 구체적으로 넣어 기능을 설명하는 것을 추천합니다. 나아가 원하는 코드 출력이 되지 않았을 때는 지속적으로 대화로 요청하며 오류가 발생하는 부분 수정 및 원하는 기능 표현을 제시하여 코드를 정교화할 수 있습니다. 챕터 10, 11에서 했던 대화 내용링크를 공유한다. 아래는 GPT 엔지니어링 대화 링크입니다.
+[https://chat.openai.com/share/3d4ead52-db6f-468c-8d31-80fdffb5299c](https://chat.openai.com/share/1acba22f-a9ff-45ad-9c7e-65c0fba5ebd1)
     
      마이크로 비트 기능: 
      1) 중복 for문 활용
@@ -109,27 +109,40 @@ while True:
     ```
 
   - GPT생성 코드_01
-    ```
-    from microbit import *
+```
+    # 1. 마이크로비트 기능:
 
-    #Create a plus-shaped separator in the center
-    for i in range(5):
-        display.set_pixel(2, i, 4)
-        display.set_pixel(i, 2, 4)
-    
-    while True:
-        # x = y graph animation
-        for i in range(5):
-            display.set_pixel(i, 4 - i, 9)
-            sleep(200)  # Adjust the speed of the animation
-            display.set_pixel(i, 4 - i, 0)
-    
-        # x = -y graph animation
-        for i in range(5):
-            display.set_pixel(i, i, 9)
-            sleep(200)  # Adjust the speed of the animation
-            display.set_pixel(i, i, 0)
-    ```
+from microbit import *
+
+# 중복 for문 활용
+# 1차 함수 그래프를 display에 나타내는 마이크로비트 코드
+# 버튼 A와 버튼 B로 선택하여 출력
+# 그래프는 2,2를 중심으로 양방향으로 펼쳐지는 애니메이션
+# 버튼을 누를 때마다 해당 그래프를 그리며, 애니메이션 속도 조절 가능
+
+while True:
+    # 버튼 A와 버튼 B 입력 감지
+    if button_a.is_pressed():
+        # 버튼 A를 누르면 y=x 그래프 출력
+        for x in range(5):
+            for y in range(5):
+                if x == y:
+                    display.set_pixel(x, y, 9)
+                else:
+                    display.set_pixel(x, y, 0)
+    elif button_b.is_pressed():
+        # 버튼 B를 누르면 y=-x 그래프 출력
+        for x in range(5):
+            for y in range(5):
+                if x + y == 4:
+                    display.set_pixel(x, y, 9)
+                else:
+                    display.set_pixel(x, y, 0)
+    else:
+        # 버튼이 눌리지 않은 경우 디스플레이 지우기
+        display.clear()
+
+ ```
 
   - GPT생성 코드_02
     ```
