--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -108,7 +108,7 @@ while True:
      5) 버튼을 누를 때마다 해당 그래프를 그리며, 애니메이션 속도 조절 가능
     ```
 
-  - GPT생성 코드_01
+  - GPT생성 코드
 ```
     # 1. 마이크로비트 기능:
 
