--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -90,17 +90,18 @@ while True:
 *  y=x 그래프와 y=-x 그래프를 버튼 A와 버튼 B로 선택 출력하는 장치
   - GPT프롬프트 템플릿
     ```
-    #이전 대화 창(10장에서 사용했던 GPT 대화창)에서 '기능'만 쿼리로 입력하여 1줄 제공해보기.
-    #프롬프트 엔지니어링 템플릿을 활용하지 않음.
-    #대화가 많아지면 이전 대화를 참조(데이터를 읽어오는)하는데 시간이 오래걸림. 그 때 '기능'정도만 입력해도 원하는 코드가 출력되는 것을 확인할 수 있음.
     1.마이크로 비트 기능:
     ```
+#이전 대화 창(10장에서 사용했던 GPT 대화창)에서 '기능'만 쿼리로 입력하여 1줄 제공해보기.
+#프롬프트 엔지니어링 템플릿을 활용하지 않음.
+#대화가 많아지면 이전 대화를 참조(데이터를 읽어오는)하는데 시간이 오래걸림. 그 때 '기능'정도만 입력해도 원하는 코드가 출력되는 것을 확인할 수 있음.
+
   - GPT 프롬프트 템플릿 입력 내용
 #GPT 3.5모델로는 아래 '기능'내용을 입력하게 되면, 원하는 코드가 제공 되지 않을 수 있습니다. 그럴 때는 마이크로 비트 LED 0,0부터 4,4까지 LED좌표를 구체적으로 넣어 기능을 설명하는 것을 추천합니다. 나아가 원하는 코드 출력이 되지 않았을 때는 지속적으로 대화로 요청하며 오류가 발생하는 부분 수정 및 원하는 기능 표현을 제시하여 코드를 정교화할 수 있습니다. 챕터 10, 11에서 했던 대화 내용링크를 공유한다. 아래는 GPT 엔지니어링 대화 링크입니다.
-```
-    
 [https://chat.openai.com/share/3d4ead52-db6f-468c-8d31-80fdffb5299c](https://chat.openai.com/share/1acba22f-a9ff-45ad-9c7e-65c0fba5ebd1)
-    
+
+- GPT프롬프트 템플릿
+```    
      마이크로 비트 기능: 
      1) 중복 for문 활용
      2) 1차 함수 그래프를 display에 나타내는 마이크로 비트 코드
@@ -111,8 +112,6 @@ while True:
 
   - GPT생성 코드
 ```
-    # 1. 마이크로비트 기능:
-
 from microbit import *
 
 # 중복 for문 활용
