--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -142,7 +142,7 @@ while True:
 
  ```
 
-  - GPT생성 코드를 수정
+  - GPT 답변 코드 생성 후 재설계
     - 4사분면 라인을 표현하고, 그래프 라인 애니매이션 표현하기
 ```
 from microbit import *
