--- a/Microbit/GPT+Microbit/12.while문 기초.md
+++ b/Microbit/GPT+Microbit/12.while문 기초.md
@@ -98,7 +98,7 @@
 ## 이해하기 샘플코드
 * 샘플코드_01
 * [런모어 질문] 조크 바이러스(Joke virus)란 무엇인가요?
-  - While 활용 ‘조크 바이러스(Joke Virus)’로 정보통신 윤리 이해하기
+  - while 활용 ‘조크 바이러스(Joke Virus)’로 정보통신 윤리 이해하기
 ```
 from microbit import *
 
