--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -147,12 +147,12 @@
   while True:
       if radio.receive() == 'shake':
           print('지진이 발생하고 있습니다.')
-          display.scroll('Earthquake')
+          display.scroll('Earthquake', delay=30)
       
       if button_a.is_pressed(): #수신부 a버튼을 누르고 있을 때 온도 측정
           temp = radio.receive()
           print('온도를 측정합니다. 온도 값은 {}도 입니다.'.format(temp))
-          display.scroll(str(temp))
+          display.scroll(str(temp), delay=30)
           sleep(500)
    ```
 
