--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -316,7 +316,7 @@
     #'창의적' 부분을 LED픽셀 x,y값을 정확히 입력하여 수정해도 된다. '창의적'으로 작성하면 GPT가 다양한 코드 결과를 출력한다. 여기서 오류가 발생할 수 있다. 오류 또한 GPT를 이용하여 디버깅 해보자. 
     ```
   - GPT생성 코드
-  - 아직 random 라이브러리를 배우지 않았자만, GPT가 창의적으로 random라이브러리를 사용하여 x, y 픽셀을 일정 시간 동안 불규칙하게 키는 코드를 설계하였다. 
+  - 아직 random 라이브러리를 배우지 않았지만, GPT가 창의적으로 random라이브러리를 사용하여 x, y 픽셀을 일정 시간 동안 불규칙하게 키는 코드를 설계하였다. 
     ```
     from microbit import *
     import random
