--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -172,7 +172,7 @@ from microbit import*
 import music
 
 alphabet = ['p', 'b', 'w', 'j', 'm', 'f', 'i', 'x', 's', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
-display.show(alphabet, delay=180)
+print(alphabet)
 music.play(music.BA_DING)
 
 
