--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -221,6 +221,7 @@ for x in range(len(alphabet)):
 ```
 from microbit import *
 import random
+import radio
 
 # 라디오 설정
 radio.on()
@@ -269,6 +270,7 @@ while True:
 ```
 from microbit import *
 import random
+import radio
 
 # 라디오 설정
 radio.on()
