--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -340,7 +340,7 @@ for x in alphabet:
         overlap[x] = count
 
 for letter, count in overlap.items():
-    print('{} 주소의 알파벳은 개수는 {}입니다'.format(letter, count))
+    print('{} 알파벳은 개수는 {}입니다'.format(letter, count))
 ```
 
 ## 적용하기 샘플코드
