--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -332,15 +332,14 @@ while True:
 ```
 #리스트 카운트 합수 응용
 alphabet = ['p', 'b', 'a', 'w', 'j', 'b', 'm', 'f', 'i', 'x', 's', 'c', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'a', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
-overlap = {}  # 중복된 알파벳을 저장하기 위한 빈 딕셔너리
 
+checked = []  # 이미 확인된 알파벳을 저장하기 위한 리스트
 for x in alphabet:
-    count = alphabet.count(x)
-    if count > 1:
-        overlap[x] = count
-
-for letter, count in overlap.items():
-    print('{} 알파벳은 개수는 {}입니다'.format(letter, count))
+    if x not in checked:  # 현재 알파벳이 이미 확인된 알파벳이 아닌 경우에만 처리
+        count = alphabet.count(x)
+        if count > 1:
+            print('{} 알파벳은 개수는 {}입니다'.format(x, count))
+        checked.append(x)  # 현재 알파벳을 확인된 알파벳 리스트에 추가
 ```
 
 ## 적용하기 샘플코드
