--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -354,8 +354,62 @@ for x in alphabet:
 ```
 저는 현재 마이크로비트를 이용해 파이썬으로 디지털 주사위를 만드는 {디지털 주사위 프로젝트}를 진행 중입니다. 이 주사위는 마이크로비트의 버튼을 누르거나 가속도 센서를 흔들어서 {1부터 6까지의 무작위 숫자 생성} 기능을 구현해야 합니다. 프로젝트의 핵심은 {버튼 누름 또는 가속도 센서 흔들림 감지}를 통해 주사위 숫자를 결정하는 것입니다. 제가 구상한 코드 설계에 {가속도 센서와 버튼 입력 처리 방법}에 대한 자세한 가이드라인을 제공해주시면 감사하겠습니다. 또한, 최근 마이크로비트 라이브러리의 {업데이트 사항}에 대해서도 알려주시고, 이 프로젝트에서 {윤리적 또는 법적 문제}가 없는지 확인해주세요. 마지막으로, 이 주사위 기능 외에 마이크로비트의 다른 기능을 활용하여 {프로젝트의 흥미를 높일 수 있는 추가적인 요소}에 대한 아이디어도 함께 고려해주시면 감사하겠습니다.
 ```
+
+GPT생성 코드(리스트 활용)
+```
+from microbit import *
+import random
+
+# 주사위 눈 숫자에 해당하는 패턴을 정의합니다.
+dice_patterns = [
+    "00000:"
+    "00000:"
+    "00900:"
+    "00000:"
+    "00000",
+    "90000:"
+    "00000:"
+    "00000:"
+    "00000:"
+    "00009",
+    "90000:"
+    "00000:"
+    "00900:"
+    "00000:"
+    "00009",
+    "90009:"
+    "00000:"
+    "00000:"
+    "00000:"
+    "90009",
+    "90009:"
+    "00000:"
+    "00900:"
+    "00000:"
+    "90009",
+    "90009:"
+    "00000:"
+    "90009:"
+    "00000:"
+    "90009"
+]
+
+while True:
+    # 마이크로비트를 흔들 때까지 대기합니다.
+    while accelerometer.was_gesture("shake") == False:
+        pass
     
-  - GPT생성 코드(def 함수 활용)
+    # 랜덤한 숫자를 선택합니다.
+    dice_roll = random.randint(1, 6)
+    
+    # 선택된 숫자에 해당하는 패턴을 화면에 출력합니다.
+    display.show(Image(dice_patterns[dice_roll - 1]))
+    sleep(2000)  # 2초 동안 결과를 표시합니다.
+    display.clear()  # 화면을 지웁니다.
+```
+
+
+  - 이외 GPT생성 코드(def 함수 활용, list활용 안함)
 ```
 from microbit import *
 import random
@@ -386,7 +440,7 @@ while True:
         display.clear()
 ```
   
-  - GPT생성 코드(def 함수 활용 안함)
+  - 이외 GPT생성 코드(def 함수 활용 안함, 리스트 활용 안함)
 ```
 from microbit import *
 import random
