Update 15.복합자료형(tuple & dictionary & set).md

--- a/Microbit/GPT+Microbit/15.복합자료형(tuple & dictionary & set).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(tuple & dictionary & set).md
@@ -3,7 +3,7 @@
 ### 튜플 이해 및 실습
 * 샘플코드_01
 ```
-#챕터5 a, b버튼 카운팅 출력 코드 응용 수정
+#파트5 a, b버튼 카운팅 출력 코드 응용 수정
 #button_a.get_presses() 함수를 사용하지 않고, 버튼이 눌린 횟수를 계산하여 출력
 #튜플을 사용하고 튜플의 특징인 요소 접근 방법 및 튜플의 불변성을 이해할 수 있는 코드
 
