Update 15.복합자료형(tuple & dictionary & set).md

--- a/Microbit/GPT+Microbit/15.복합자료형(tuple & dictionary & set).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(tuple & dictionary & set).md
@@ -115,6 +115,7 @@ while True:
    ```
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - 온도, 조도, 가속도 데이터 관리 방법
 ```
 from microbit import *
 import time
@@ -139,6 +140,7 @@ while True:
 ```
 
 * 샘플코드_02
+  - 온도, 조도, 가속도 딕셔너리 관리 방법
 ```
 from microbit import *
 import time
@@ -169,6 +171,7 @@ while True:
 ```
 
 * 샘플코드_03
+  - 셋 관련 매서드(함수)
 ```
 from microbit import *
 import random
