--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -191,7 +191,7 @@ def main():
         elif pin0.is_touched():
             operation = '5'  # 예시: 나눗셈의 몫
         elif pin1.is_touched():
-            operation = '6'  # 예시: 나눗셈의 나머비
+            operation = '6'  # 예시: 나눗셈의 나머지
         elif pin2.is_touched():
             operation = '7'  # 예시: 거듭제곱
         else:
