--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -125,27 +125,21 @@ pin2.set_touch_mode(pin2.CAPACITIVE)
 # 덧셈 함수
 def add(a, b):
     return a + b
-
 # 뺄셈 함수
 def subtract(a, b):
     return a - b
-
 # 곱셈 함수
 def multiply(a, b):
     return a * b
-
 # 나눗셈 함수
 def divide(a, b):
     return a / b
-
 # 나눗셈 몫 함수
 def division_quotient(a, b):
     return a // b
-
 # 나머지 함수
 def division_remainder(a, b):
     return a % b
-
 # 거듭제곱 함수
 def power(a, b):
     return a ** b
@@ -177,7 +171,7 @@ def main():
     # 여기서는 예시로 a와 b에 고정값을 할당합니다. 실제로는 사용자 입력을 받아 값을 할당할 수 있습니다.
     a = int(input('a값 입력:'))
     b = int(input('b값 입력:'))
-    print('1:덧셈 2:뺄셈 3:곱셈 4:나눗셈 5:몫 6:나머지 7:거듭 제곱')
+    print('a 버튼:덧셈 \nb버튼:뺄셈 \na+b버튼:곱셈 \n로고터치:나눗셈 \n핀0:몫 \n핀1:나머지 \n핀2:거듭 제곱')
     while True:
         # 사용자 입력 대신 버튼 A와 B의 조합으로 연산자를 선택하는 예시입니다.
         if button_a.was_pressed():
@@ -199,7 +193,6 @@ def main():
 
         calculate(operation, a, b)
         sleep(1000)  # 결과를 충분히 본 후 다음 입력을 받기 위해 잠시 대기
-
 main()
 ```
 
