--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -276,22 +276,24 @@ def do_re_mi_song():
         
     ]
     music.play(melody)
-# 메인 코드
-while True:
-    print('----------Music Box---------')
-    print('뮤직박스! 노래를 선택해주세요.')
-    print('1번은 작은별\n2번은 아기상어\n3번은 도레미송') #\n은 문자열 이스케이프 명령 중 줄바꿈 기능
-    print('----------------------------')
-    melody_box = int(input('노래 선택:'))
-    if melody_box == 1:
-        twinkle_twinkle()
-    elif melody_box == 2:
-        baby_shark()
-    elif melody_box == 3:
-        do_re_mi_song()
-    else:
-        print('번호를 다시 선택해주세요' )
-        continue
+def main():
+    while True:
+        print('----------Music Box---------')
+        print('뮤직박스! 노래를 선택해주세요.')
+        print('1번은 작은별\n2번은 아기상어\n3번은 도레미송') #\n은 문자열 이스케이프 명령 중 줄바꿈 기능
+        print('----------------------------')
+        melody_box = int(input('노래 선택:'))
+        if melody_box == 1:
+            twinkle_twinkle()
+        elif melody_box == 2:
+            baby_shark()
+        elif melody_box == 3:
+            do_re_mi_song()
+        else:
+            print('번호를 다시 선택해주세요' )
+            continue
+
+main()         
 ```
 
 ## 적용하기 샘플코드
