--- a/Microbit/GPT+Microbit/17.클래스와 모듈.md
+++ b/Microbit/GPT+Microbit/17.클래스와 모듈.md
@@ -1,239 +1,22 @@
 # 모듈과 라이브러리 파트 코드
-## 배우기 샘플코드
-### 클래스 이해 및 실습
-* 샘플코드_01-1
+## 클래스 이해 및 실습
+* 샘플코드_01
   - 클래스(class) 기본
 ```
-from microbit import *
+class Car:
+    def __init__(self, brand, color):
+        self.brand = brand  # 브랜드
+        self.color = color  # 색상
+    def drive(self):
+        print('{}색 {}가 출발합니다!'.format(self.color, self.brand))
 
-class LED:
-    def __init__(self):
-        pass
-
-    def on(self):
-        display.show(Image.HEART) # LED를 켜는 메소드
-
-    def off(self):
-        display.clear() # LED를 끄는 메소드
-
-# 클래스 사용
-led = LED()
-while True:
-    led.on() #LED().on()
-    sleep(1000)
-    led.off() #LED().off()
-    sleep(1000)
+my_car01 = Car("테라스", "파란")
+my_car02= Car("테라스", "빨강")
+my_car01.drive()
+my_car02.drive()
 ```
-* 샘플코드_01-2
-  - 파라미터(parameter)를 사용하는 클래스
-```
-from microbit import *
-
-class LED:
-    def __init__(self, interval):
-        self.interval = interval # 점멸 간격을 설정하는 인스턴스 변수
-
-    def blink(self):
-        display.show(Image.HEART)
-        sleep(self.interval)
-        display.clear()
-        sleep(self.interval)
-
-# 클래스 사용
-led = LED(500) # 500ms 간격으로 점멸
-while True:
-    led.blink()
-```
-### 모듈 이해 및 실습
-* 샘플코드_02-base_display.py 파일
-```
-# base_features.py 파일은 부모 클래스 파일(모듈)
-from microbit import display, Image
-
-class DisplayObject:
-    def show(self):
-        """디스플레이 객체가 출력될 때 기본 동작을 정의합니다."""
-        display.show(Image.HAPPY)
-
-class ButtonHandler:
-    def __init__(self, button):
-        self.button = button
-
-    def is_pressed(self):
-        """버튼이 눌렸는지 확인하는 메소드입니다."""
-        return self.button.is_pressed()
-```
-* 샘플코드_02-custom_display.py 파일
-```
-# advanced_features.py 파일은 자식 클래스 파일(모듈)
-from microbit import button_a, button_b, display, Image
-from base_features import DisplayObject, ButtonHandler
-
-class InteractiveDisplay(DisplayObject):
-    def show(self):
-        """상속을 통해 DisplayObject의 show 메소드를 오버라이드합니다."""
-        display.show(Image.CONFUSED)
-
-class ButtonAHandler(ButtonHandler):
-    def __init__(self):
-        super().__init__(button_a)
-
-class ButtonBHandler(ButtonHandler):
-    def __init__(self):
-        super().__init__(button_b)
-```
-* 샘플코드_02-main.py 파일
-```
-# main.py 파일은 상속된 클래스를 사용하는 파일
-from custom_display import CustomDisplay
-from microbit import sleep
-
-# CustomDisplay 클래스의 인스턴스 생성
-custom_display = CustomDisplay()
-
-# 상속받은 메소드 호출
-custom_display.show_image()  # BaseDisplay에서 상속받은 메소드
-sleep(2000)
-
-# 확장된 클래스에서 정의된 새로운 메소드 호출
-custom_display.show_custom_image()
-sleep(2000)
-```
-
-### 라이브 러리 이해 및 실습: random 라이브러리
-* 샘플코드_03
-```
-from microbit import *
-import random
-
-def display_random_int():
-    num = random.randint(1, 9)
-    display.show(str(num))
-
-def display_random_range():
-    num = random.randrange(0, 10, 2)  # 0에서 9 사이의 짝수
-    display.show(str(num))
-
-def display_random_float():
-    num = random.random()
-    display.scroll(str(round(num, 2)))
-
-def display_random_choice():
-    items = ['A', 'B', 'C', 'D', 'E']
-    choice = random.choice(items)
-    display.show(choice)
-
-def display_random_uniform():
-    num = random.uniform(1, 3)
-    display.scroll(str(round(num, 2)))
-
-random_functions = [
-    display_random_int,
-    display_random_range,
-    display_random_float,
-    display_random_choice,
-    display_random_uniform
-]
-
-current_function_index = 0
-
-while True:
-    if button_a.was_pressed():
-        random_functions[current_function_index]()
-        current_function_index = (current_function_index + 1) % len(random_functions)
-        sleep(1000)
-```
-
-## 이해하기 샘플코드
-* 샘플코드_01
-  - '상속'을 사용하는 확장된 클래스
-```
-from microbit import *
-
-class LED:
-    def __init__(self, interval):
-        self.interval = interval
-
-    def blink(self):
-        display.show(Image.HEART)
-        sleep(self.interval)
-        display.clear()
-        sleep(self.interval)
-
-class FancyLED(LED): # LED 클래스 상속
-    def fancy_blink(self):
-        for _ in range(2):
-            self.blink()
-        sleep(1000)
-        for _ in range(3):
-            self.blink()
-
-# 클래스 사용
-fancy_led = FancyLED(200) # 200ms 간격으로 점멸
-while True:
-    fancy_led.fancy_blink()
-```
-
-* 샘플코드_02- sensor_reading.py 파일
-  - 센서(마이크, 온도, 조) 컨트롤 모듈화 코드 
-  - 센서 기본 클래스 정의
-```
-# sensor_base.py
-class SensorBase:
-    def read(self):
-        pass
-
-    def display_value(self, value):
-        print("Sensor value:", value)
-```
-* 샘플코드_02- sensor_readings.py 파일
-  - 센서(온도, 조도, 마이크) 컨트롤 모듈화 코드
-  - 특정 센서(온도, 조도, 마이크)를 위한 클래스 정의
-```
-# sensor_readings.py
-
-from microbit import *
-
-class MicSensor():
-    def read(self):
-       return microphone.sound_level()
-
-class TemperatureSensor():
-    def read(self):
-        return temperature()
-
-class LightSensor():
-    def read(self):
-        return display.read_light_level()
-```
-* 샘플코드_02- main.py 파일
-  - 센서(온도, 조도, 마이크) 컨트롤 모듈화 코드
-  - 센서 리딩 모듈 사용
-```
-# main.py
-from sensor_readings import *
-from microbit import *
-
-mic_sensor = MicSensor()
-temp_sensor = TemperatureSensor()
-light_sensor = LightSensor()
-
-while True:
-    # 마이크 센서값 값 읽기
-    mic_values = mic_sensor.read()
-    print('Mic_sound_lv: {}'.format(mic_values))
-    
-    # 온도 센서 값 읽기
-    temp_value = temp_sensor.read()
-    print('Temperature:', temp_value, 'degrees Celsius')
-
-    # 조도 센서 값 읽기
-    light_value = light_sensor.read()
-    print('Light_lv: {}'.format(light_value))
-    sleep(2000)
-```
-
-* 샘플코드_03- game_rules.py 파일
+## 모듈 이해 및 실습
+* 샘플코드_02- game_rules.py 파일
   - 0-100 까지 랜덤으로 생성된 숫자 빨리 맞추기 게임기
 ```
 # game_rules.py
@@ -244,7 +27,7 @@ def start_game():
     return random.randint(0, 100)  # 0에서 100 사이의 난수 생성
 ```
 
-* 샘플코드_03- number_guessing.py 파
+* 샘플코드_02- number_guessing.py 파
   - 0-100 까지 랜덤으로 생성된 숫자 빨리 맞추기 게임기
 ```
 # number_guessing.py
@@ -268,7 +51,7 @@ def guess_number(target):
             print("정수를 입력해야 합니다.")
 ```
 
-* 샘플코드_03- main.py 파일
+* 샘플코드_02- main.py 파일
   - 0-100 까지 랜덤으로 생성된 숫자 빨리 맞추기 게임기
 ```
 from microbit import*
