--- a/Microbit/GPT+Microbit/17.클래스와 모듈.md
+++ b/Microbit/GPT+Microbit/17.클래스와 모듈.md
@@ -27,8 +27,7 @@ def start_game():
     return random.randint(0, 100)  # 0에서 100 사이의 난수 생성
 ```
 
-* 샘플코드_02- number_guessing.py 파
-  - 0-100 까지 랜덤으로 생성된 숫자 빨리 맞추기 게임기
+* 샘플코드_02- number_guessing.py 파일
 ```
 # number_guessing.py
 def guess_number(target):
@@ -52,7 +51,6 @@ def guess_number(target):
 ```
 
 * 샘플코드_02- main.py 파일
-  - 0-100 까지 랜덤으로 생성된 숫자 빨리 맞추기 게임기
 ```
 from microbit import*
 from game_rules import start_game
