--- a/Microbit/Training/04.Traing(For문 문제).md
+++ b/Microbit/Training/04.Traing(For문 문제).md
@@ -1,28 +1,19 @@
 # For문 문제
 * 문제1
-  *ㅇㅇㅇㅇ
+  - for문 사용 마이크로  비트 전면 LED 25개 은은하게 켜졌다, 은은하게 꺼지도록 반복하기
 ```
 from microbit import *
-
-#플래싱을 할 때 눌러야 함
-while button_a.was_pressed():
-    while True:
-        num=input("원하는 숫자, 문자를 입력해주세요(종료는 q):")
-        if num=="q":
-            break
-        else:
-            display.scroll(num)
-            sleep(1000)
-            display.clear()
-
-while button_b.was_pressed():
-    for x in range(0,5,1):
-        for y in range(0,5,1):
-            display.set_pixel(x,y,9)
-            sleep(50)
-    
-    for x in range(4,-1,-1):
-        for y in range(4,-1,-1):
-            display.set_pixel(x,y,0)
-            sleep(50)
+while 1==1:
+    for z in range (9):
+        for x in range(5):
+            for y in range(5):
+                display.set_pixel(x,y,z)
+        sleep(40)
+        display.clear()
+    for z in range (9):
+        for x in range(5):
+            for y in range(5):
+                display.set_pixel(x,y,9-z)
+        sleep(75)
+        display.clear()
 ```
