Update 파이썬 3시간 끝내기.md

--- a/Python/파이썬 3시간 끝내기.md
+++ b/Python/파이썬 3시간 끝내기.md
@@ -4,6 +4,11 @@
   ```
   print("Hello, World!")  # 출력문
   ```
+* 입력문
+  ```
+  text=input('출력할 문장 입력:')
+  print(text) 
+  ```
 * 변수와 데이터 타입
   ```
   name = "Alice"  # 문자열
