Update 파이썬 3시간 끝내기.md

--- a/Python/파이썬 3시간 끝내기.md
+++ b/Python/파이썬 3시간 끝내기.md
@@ -73,4 +73,20 @@
       content = file.read()
       print(content)
    ```
+* 3,6,9 게임 설계
+  ```
+  num = int(input("숫자를 입력하세요: "))
+
+for i in range(1, num + 1):
+    number_str = str(i)
+    contains_3 = '3' in number_str
+    contains_6 = '6' in number_str
+    contains_9 = '9' in number_str
+
+    if contains_3 or contains_6 or contains_9:
+        clap_count = number_str.count('3') + number_str.count('6') + number_str.count('9')
+        print("짝" * clap_count)
+    else:
+        print(i)
+  ```
   
