Update 파이썬 3시간 끝내기.md

--- a/Python/파이썬 3시간 끝내기.md
+++ b/Python/파이썬 3시간 끝내기.md
@@ -19,6 +19,7 @@
 * 기본 연산
   - +, -, *, /, //. %, **
   ```
+  age = 30
   sum = age + 5
   print(name + " will be " + str(sum) + " years old in 5 years.")
   ```
