Update 파이썬 3시간 끝내기.md

--- a/Python/파이썬 3시간 끝내기.md
+++ b/Python/파이썬 3시간 끝내기.md
@@ -28,8 +28,10 @@
   number = 10
   if number % 2 == 0:
     print("The number is even.")
-  else:
+  elif number % 2 ==1:
     print("The number is odd.")
+  else:
+    print("다시 입력")
   ```
 * For loop
   ```
@@ -43,12 +45,6 @@
     print(count)
     count += 1
   ```
-* 함수 정의 및 기본 호출
-  ```
-  def greet(name):
-    return "Hello, " + name + "!"
-
-  print(greet("Alice"))
   ```
 * 자료구조: 리스트
   ```
@@ -64,16 +60,15 @@
   ```
   grades = {"Alice": 90, "Bob": 85, "Charlie": 92}
   print(grades["Bob"])
+
+* 함수 정의 및 기본 호출
   ```
-* 파일 I/O
-   ```
-    with open("example.txt", "w") as file:
-      file.write("Hello, this is a test file.")
-  
-    with open("example.txt", "r") as file:
-      content = file.read()
-      print(content)
-   ```
+  def greet(name):
+    return "Hello, " + name + "!"
+
+  print(greet("Alice"))
+  ```
+
 * 3,6,9 게임 설계
   ```
   num = int(input("숫자를 입력하세요: "))
