--- a/Python/파이썬 3시간 끝내기.md
+++ b/Python/파이썬 3시간 끝내기.md
@@ -85,4 +85,56 @@
       else:
           print(i)
   ```
-  
+
+  * 함수를 활용한 계산기 제작
+  ```
+  def add(x, y):
+    """두 수의 덧셈을 수행합니다."""
+    return x + y
+
+  def subtract(x, y):
+    """두 수의 뺄셈을 수행합니다."""
+    return x - y
+
+  def multiply(x, y):
+    """두 수의 곱셈을 수행합니다."""
+    return x * y
+
+  def divide(x, y):
+    """두 수의 나눗셈을 수행합니다."""
+    if y == 0:
+        return "오류: 0으로 나눌 수 없습니다."
+    return x / y
+
+  def calculator():
+    """사용자로부터 입력을 받아 4칙연산을 수행하는 계산기입니다."""
+    print("계산기 실행:")
+    print("1: 덧셈")
+    print("2: 뺄셈")
+    print("3: 곱셈")
+    print("4: 나눗셈")
+
+    choice = input("원하는 연산을 선택하세요 (1/2/3/4): ")
+
+    if choice in ['1', '2', '3', '4']:
+        num1 = float(input("첫 번째 숫자를 입력하세요: "))
+        num2 = float(input("두 번째 숫자를 입력하세요: "))
+
+        if choice == '1':
+            print(f"결과: {num1} + {num2} = {add(num1, num2)}")
+
+        elif choice == '2':
+            print(f"결과: {num1} - {num2} = {subtract(num1, num2)}")
+
+        elif choice == '3':
+            print(f"결과: {num1} * {num2} = {multiply(num1, num2)}")
+
+        elif choice == '4':
+            print(f"결과: {num1} / {num2} = {divide(num1, num2)}")
+    else:
+        print("잘못된 입력입니다. 다시 시도하세요.")
+
+  # 계산기 실행
+  calculator()
+
+  ```
