Update 파이썬 3시간 끝내기.md

--- a/Python/파이썬 3시간 끝내기.md
+++ b/Python/파이썬 3시간 끝내기.md
@@ -50,6 +50,18 @@
   students = ["Alice", "Bob", "Charlie"]
   print(students[0])  # 리스트 요소 접근
   ```
+* 리스트 예제
+  ```
+  numbers = [1, 2, 3, 4, 5]
+  
+  squared_numbers = []
+  
+  for number in numbers:
+      squared_numbers.append(number ** 2)
+  
+  print("원래 리스트:", numbers)
+  print("제곱된 리스트:", squared_numbers)
+  ```  
 * 자료구조: 튜플
   ```
   colors = ("red", "green", "blue")
