Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -157,17 +157,17 @@ radio.on()
 while True:
     group_num=int(input("전송하려는 그룹 1-6을 선택하세요:"))
     messege=input("전달하려는 메세지를 영어로 입력하세요:")
-    if group_num=1:
+    if group_num==1:
         radio.send("messege")
-    elif group_num=2:
+    elif group_num==2:
         radio.send("messege")
-    elif group_num=3:
+    elif group_num==3:
         radio.send("messege")
-    elif group_num=4:
+    elif group_num==4:
         radio.send("messege")
-    elif group_num=5:
+    elif group_num==5:
         radio.send("messege")
-    else group_num=6:
+    elif group_num==6:
         radio.send("messege")
 ``` 
  - 수신(Receive)코드
